welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:16: error: Unmatched closing brace '}' ignored here
 }
 ^